Configure extra java options - part 1